--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ tbody tr:nth-child(even) {
 
       // Calculations
       const totalWork = work + google;
-      const deposited = totalWork - earned - dailyCollection;
+      const deposited = totalWork - earned - dailyCollection - googel;
 
       // Create entry object
       const entry = {
